<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.massive.voicetext.SettingsActivity$LanguagePreferenceFragment"
        android:icon="@drawable/language_translate_icon"
        android:title="@string/pref_header_Translate" />

    <header
        android:fragment="com.massive.voicetext.SettingsActivity$FontSizeChangePreferenceFragment"
        android:icon="@drawable/font_size"
        android:title="@string/pref_header_font_size" />

    <header
        android:fragment="com.massive.voicetext.SettingsActivity$FeauterPreferenceFragment"
        android:icon="@drawable/rocket_ship"
        android:title="@string/pref_header_feature" />

</preference-headers>
