<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.massive.voicetext.Ui.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/voice_to_text"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/text_font_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/ReturnedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="18sp"
            tools:text="TextView" />
    </ScrollView>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/RecorderImageButton"
        android:layout_width="117dp"
        android:layout_height="120dp"
        android:layout_marginBottom="112dp"
        android:background="@android:color/background_light"
        android:scaleType="fitCenter"
        app:elevation="6dp"
        android:contentDescription="@string/this_is_favouirte_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/microphone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/click_to_start_record"
        android:textStyle="italic"
        ads:layout_constraintVertical_bias="0.13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecorderImageButton" />

    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/MaterialFavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mfb_animate_favorite="true"
        app:mfb_animate_unfavorite="false"
        app:mfb_bounce_duration="300"
        app:mfb_color="black"
        app:mfb_favorite_image="@drawable/fav"
        app:mfb_not_favorite_image="@drawable/unfav"
        app:mfb_padding="12"
        app:mfb_rotation_angle="360"
        app:mfb_rotation_duration="400"
        app:mfb_size="80"
        app:mfb_type="star" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/FavimageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        ads:srcCompat="@drawable/unfav"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/favourt_button" />
</android.support.constraint.ConstraintLayout>
